# azureml_experiment_tracking_tutorial

./: .amlignore  .gitignore  Dockerfile  README.md  azure-container.yaml  azure-pipelines.yaml  fastapi.Dockerfile  notebook.ipynb  pyproject.toml  requirements-azuremlruntime.txt  requirements.txt
azureml_deployment/: README.md
azureml_deployment/src/: main.py  test.py
azureml_scripts/: download_model.py  make_deployment.py  submit_job.py  submit_job_custom_docker_image.py
azureml_tracking/: README.md  train_baseline.py  train_with_mlflow.py  utils.py
azureml_tutorial/: create_dataset.py  download_model.py  register.py  submit_job.py  submit_job_custom_docker_image.py  train.py  train_with_mlflow.py  utils.py
data/: test.csv  train.csv
scripts/: create_dataset.py  download_dataset.py  download_model.py  register_model.py  utils.py
templates/: README.md
templates/deployment/: README.md  fastapi.Dockerfile  log_conf.yml  make_deployment.py  sample_request.py
templates/deployment/src/: main.py
templates/experiment_tracking/: README.md  train_baseline.py  train_with_mlflow.py
templates/experiment_tracking/scripts/: submit_job.py
tutorials/deployment/: README.md
tutorials/experiment_tracking/: README.md  download_dataset.py  register_model.py  train_baseline.ipynb  train_with_azureml.ipynb  train_with_mlflow.ipynb  train_with_mlflow.py  tutorial.ipynb
